--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1294,7 +1294,7 @@ input, select, textarea {
 			width: 5.5rem;
 			height: 5.5rem;
 			line-height: 5.5rem;
-			border: solid 1px #b12020;
+			border: solid 1px #ffffff;
 			border-radius: 100%;
 		}
 
@@ -1660,151 +1660,79 @@ input, select, textarea {
 			opacity: 0;
 		}
 
-
-
-		<div class="row button-section">
-		<div class="col-twelve">
-			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Get in contact</a>
-			<a href="Hicham_Mokhtari_-_Cover_Letter (3).pdf" title="Download CV (Growth)" class="button button-primary">Download Cover</a>
-			<a href="Hicham_Mokhtari_-_Student (1).pdf" title="Download CV (Solidity)" class="button button-primary">Download CV</a>
-		</div>   		
-	</div>
-
-</section> <!-- /process-->    
-
-
-<!-- resume Section
-================================================== -->
- <section id="resume" class="grey-section">
-
-	 <div class="row section-intro">
-		<div class="col-twelve">
-
-			<h5>Resume</h5>
-		 <h2>My Credentials</h2>
-		</div>   		
-	</div> <!-- /section-intro--> 
-
-	<div class="row resume-timeline">
-
-		<div class="col-twelve resume-header">
-
-			<h2>Education</h2>
-
-		</div> <!-- /resume-header -->
-
-		<div class="col-twelve">
-
-			<div class="timeline-wrap">
-
-				<div class="timeline-block">
-
-					<div class="timeline-ico">
-						<i class="fa fa-briefcase"></i>
-					</div>
-
-					<div class="timeline-header">
-						<h3>Bachelor's Degree</h3>
-						<p>July 2018 - Present(2024)</p>
-					</div>
-
-					<div class="timeline-content">
-						<h4><a href="https://www.hogeschoolrotterdam.nl/">Hogeschool Rotterdam</a></h4>
-						<p>Currently pursuing a Bachlor is science at Rotterdam School Of Applyied Sciences Studying Business IT & Management.                              - KJSCE.</p>
-					</div>
-
-				</div> <!-- /timeline-block -->
-			 
-			 
-				<div class="timeline-block">
-
-					<div class="timeline-ico">
-						<i class="fa fa-briefcase"></i>
-					</div>
-
-					<div class="timeline-header">
-						<h3>MBO Alround Laborant Techniek college Rotterdam </h3>
-						<p>2014 - 2018</p>
-					</div>
-
-					<div class="timeline-content">
-						<h4><a href="">Techniek College Rotterdam </a></h4>
-						<p>Studied Microbiologie worked in various labs for interns and work related. such as Nutricia, Koppert and Star-SHl .</p>
-					</div>
-}
-
-/**
- * responsive:
- * resume
- * ------------------------------------------------------------------- 
+		/**
+ * skillbars - (_skillbars.scss)
+ * -------------------------------------------------------------------
  */
-@media only screen and (max-width:1024px) {
-	#resume .timeline-header {
-		padding-right: 50px;
-	}
-	#resume .timeline-header h3 {
-		font-size: 1.8rem;
-	}
-	#resume .timeline-header p {
-		font-size: 1.4rem;
-	}
-	#resume .timeline-content {
-		padding-left: 50px;
-	}
+.skill-bars {
+	list-style: none;
+	margin: 6rem 0 3rem;
 }
-@media only screen and (max-width:768px) {
-	#resume .timeline-wrap::before {
-		left: 2.4rem;
-	}
-	#resume .timeline-ico {
-		left: 2.4rem;
-	}
-	#resume .timeline-header {
-		float: none;
-		width: auto;
-		padding-right: 15px;
-		text-align: left;
-	}
-	#resume .timeline-header h3 {
-		font-size: 2rem;
-	}
-	#resume .timeline-header p {
-		font-size: 1.5rem;
-		margin-bottom: 1.5rem;
-	}
-	#resume .timeline-content {
-		margin: 0;
-	}
-	#resume .timeline-content h4 {
-		padding-bottom: 0;
-		padding-top: 2.1rem;
-		margin-bottom: .6rem;
-		font-size: 1.7rem;
-	}
-	#resume .timeline-content h4::after {
-		bottom: auto;
-		top: 0;
-	}
-	#resume .timeline-header, #resume .timeline-content {
-		padding-left: 7rem;
-	}
+.skill-bars li {
+	height: .6rem;
+	background: #a1a1a1;
+	width: 100%;
+	margin-bottom: 6rem;
+	padding: 0;
+	position: relative;
 }
-@media only screen and (max-width:480px) {
-	#resume .resume-header h2 {
-		font-size: 2.2rem;
-	}
-	#resume .timeline-wrap::before {
-		left: 1.8rem;
-	}
-	#resume .timeline-ico {
-		height: 3.6rem;
-		width: 3.6rem;
-		line-height: 3.6rem;
-		left: 1.8rem;
-		margin-left: -1.8rem;
-		font-size: 1.5rem;
-	}
-	#resume .timeline-header, #resume .timeline-content {
-		padding-left: 5.5rem;
-	}
+.skill-bars li strong {
+	position: absolute;
+	left: 0;
+	top: -3rem;
+	font-family: "poppins-bold", sans-serif;
+	color: #313131;
+	text-transform: uppercase;
+	letter-spacing: .2rem;
+	font-size: 1.5rem;
+	line-height: 2.4rem;
 }
+.skill-bars li .progress {
+	background: #313131;
+	position: relative;
+	height: 100%;
+}
+.skill-bars li .progress span {
+	position: absolute;
+	right: 0;
+	top: -3.6rem;
+	display: block;
+	font-family: "poppins-regular", sans-serif;
+	color: white;
+	font-size: 1.1rem;
+	line-height: 1;
+	background: #313131;
+	padding: .6rem .6rem;
+	border-radius: 3px;
+}
+.skill-bars li .progress span::after {
+	position: absolute;
+	left: 50%;
+	bottom: -5px;
+	margin-left: -5px;
+	border-right: 5px solid transparent;
+	border-left: 5px solid transparent;
+	border-top: 5px solid #313131;
+	content: "";
+}
+
+.skill-bars li .percent5   { width: 5%; }
+.skill-bars li .percent10  { width: 10%; }
+.skill-bars li .percent15  { width: 15%; }
+.skill-bars li .percent20  { width: 20%; }
+.skill-bars li .percent25  { width: 25%; }
+.skill-bars li .percent30  { width: 30%; }
+.skill-bars li .percent35  { width: 35%; }
+.skill-bars li .percent40  { width: 40%; }
+.skill-bars li .percent45  { width: 45%; }
+.skill-bars li .percent50  { width: 50%; }
+.skill-bars li .percent55  { width: 55%; }
+.skill-bars li .percent60  { width: 60%; }
+.skill-bars li .percent65  { width: 65%; }
+.skill-bars li .percent70  { width: 70%; }
+.skill-bars li .percent75  { width: 75%; }
+.skill-bars li .percent80  { width: 80%; }
+.skill-bars li .percent85  { width: 85%; }
+.skill-bars li .percent90  { width: 90%; }
+.skill-bars li .percent95  { width: 95%; }
+.skill-bars li .percent100 { width: 100%; }
