--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1670,9 +1670,9 @@ input, select, textarea {
 }
 .skill-bars li {
 	height: .6rem;
-	background: #a1a1a1;
-	width: 100%;
-	margin-bottom: 6rem;
+	background: #8666c0;
+	width: 80%;
+	margin-bottom: 8rem;
 	padding: 0;
 	position: relative;
 }
@@ -1681,14 +1681,14 @@ input, select, textarea {
 	left: 0;
 	top: -3rem;
 	font-family: "poppins-bold", sans-serif;
-	color: #313131;
+	color: #6a3dd1;
 	text-transform: uppercase;
 	letter-spacing: .2rem;
 	font-size: 1.5rem;
 	line-height: 2.4rem;
 }
 .skill-bars li .progress {
-	background: #313131;
+	background: #328b55;
 	position: relative;
 	height: 100%;
 }
@@ -1698,7 +1698,7 @@ input, select, textarea {
 	top: -3.6rem;
 	display: block;
 	font-family: "poppins-regular", sans-serif;
-	color: white;
+	color: rgb(146, 179, 218);
 	font-size: 1.1rem;
 	line-height: 1;
 	background: #313131;
@@ -1712,7 +1712,7 @@ input, select, textarea {
 	margin-left: -5px;
 	border-right: 5px solid transparent;
 	border-left: 5px solid transparent;
-	border-top: 5px solid #313131;
+	border-top: 5px solid #1f462f;
 	content: "";
 }
 
