--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1670,7 +1670,7 @@ input, select, textarea {
 }
 .skill-bars li {
 	height: .6rem;
-	background: #8666c0;
+	background: #dac9fa;
 	width: 80%;
 	margin-bottom: 8rem;
 	padding: 0;
@@ -1681,11 +1681,11 @@ input, select, textarea {
 	left: 0;
 	top: -3rem;
 	font-family: "poppins-bold", sans-serif;
-	color: #6a3dd1;
+	color: #f7b933;
 	text-transform: uppercase;
 	letter-spacing: .2rem;
-	font-size: 1.5rem;
-	line-height: 2.4rem;
+	font-size: 1.0rem;
+	line-height: 2.0rem;
 }
 .skill-bars li .progress {
 	background: #328b55;
@@ -1736,3 +1736,4 @@ input, select, textarea {
 .skill-bars li .percent90  { width: 90%; }
 .skill-bars li .percent95  { width: 95%; }
 .skill-bars li .percent100 { width: 100%; }
+
