--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1670,7 +1670,7 @@ input, select, textarea {
 }
 .skill-bars li {
 	height: .6rem;
-	background: #dac9fa;
+	background: #554f5f;
 	width: 80%;
 	margin-bottom: 8rem;
 	padding: 0;
@@ -1681,7 +1681,7 @@ input, select, textarea {
 	left: 0;
 	top: -3rem;
 	font-family: "poppins-bold", sans-serif;
-	color: #f7b933;
+	color: #a9ace2;
 	text-transform: uppercase;
 	letter-spacing: .2rem;
 	font-size: 1.0rem;
