--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1712,7 +1712,7 @@ input, select, textarea {
 	margin-left: -5px;
 	border-right: 5px solid transparent;
 	border-left: 5px solid transparent;
-	border-top: 5px solid #1f462f;
+	border-top: 5px solid #3d1f46;
 	content: "";
 }
 
